// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCollectionPage tests should fill initial category scructure correctly when in edit mode and call updateCollection with correct arguments when save button is clicked 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900 flex flex-col overflow-y-auto"
  >
    <nav
      class="bg-gray-800 border-gray-200 dark:bg-gray-200 w-full border-b dark:border-gray-600"
    >
      <div
        class="max-w-screen-xl flex flex-wrap justify-between mx-auto p-1"
      >
        <div
          class="flex items-center mt-1"
        >
          <h1
            class="logo text-gray-200 dark:text-gray-900 text-6xl "
          >
            ethnopedia
          </h1>
        </div>
        <div
          class="flex items-center md:order-2"
        >
          <button
            class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-5 h-5 text-gray-800 dark:text-gray-200"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <button
            class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
            type="button"
          >
            <svg
              class="w-4 h-4 m-0.5"
            />
          </button>
          <button
            class="mr-2 bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zaloguj się
          </button>
          <button
            class="bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zarejestruj się
          </button>
        </div>
      </div>
    </nav>
    <div
      class="container px-8 mt-6 max-w-3xl mx-auto"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-1 md:space-x-2"
        >
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-600"
              href="/"
            >
              Strona główna
            </a>
          </li>
        </ol>
      </nav>
      <h2
        class="text-2xl font-bold mt-2"
      >
        Edytuj kolekcję
      </h2>
      <form>
        <label
          class="block text-sm text-gray-700 dark:text-white my-2 mt-4"
        >
          Nazwa
        </label>
        <input
          aria-label="name"
          class="w-full px-4 py-2 border rounded-lg text-gray-700 dark:text-white dark:bg-gray-700 focus:outline-none border-gray-300 dark:border-gray-600"
          maxlength="100"
          type="text"
          value="collection name"
        />
        <label
          class="block text-sm text-gray-700 dark:text-white my-2 mt-4"
        >
          Opis
        </label>
        <textarea
          aria-label="description"
          class="w-full px-4 py-2 border rounded-lg resize-y focus:outline-none dark:bg-gray-700 dark:text-white border-gray-300 dark:border-gray-600"
          maxlength="1000"
          rows="4"
        >
          collection description
        </textarea>
        <hr
          class="mt-6"
        />
        <label
          class="block text-sm font-bold text-gray-700 dark:text-white my-2 mt-4"
        >
          Struktura metadanych w kolekcji
        </label>
        <p
          class="text-sm text-gray-600 dark:text-gray-400 mb-4"
        >
          Zbuduj hierarchię kategorii i podkategorii dla tej kolekcji. Dodawaj i usuwaj elementy za pomocą przycisków po prawej stronie pola.
        </p>
        <div
          class="mb-3"
          style="opacity: 1; margin-left: 0px;"
        >
          <div
            class="inline-flex items-center gap-2 group w-full"
          >
            <div
              class="flex-1"
            >
              <input
                class="w-full border-b focus:outline-none px-4 py-2  border-gray-300 text-gray-700 dark:text-white dark:border-gray-600"
                maxlength="100"
                name="name"
                placeholder="Nazwa kategorii"
                type="text"
                value="Tytuł"
              />
            </div>
            <div
              class="inline-flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-opacity duration-150 flex-shrink-0"
            >
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-blue-600 hover:text-blue-800 cursor-pointer
                        "
                title="Dodaj podkategorię"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-red-600 hover:text-red-800
                            opacity-50 cursor-not-allowed hover:text-red-600
                        "
                disabled=""
                title="Usuwanie tylko nowych kategorii w trybie edycji"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mb-3"
          style="opacity: 1; margin-left: 0px;"
        >
          <div
            class="inline-flex items-center gap-2 group w-full"
          >
            <div
              class="flex-1"
            >
              <input
                class="w-full border-b focus:outline-none px-4 py-2  border-gray-300 text-gray-700 dark:text-white dark:border-gray-600"
                maxlength="100"
                name="name"
                placeholder="Nazwa kategorii"
                type="text"
                value="Region"
              />
            </div>
            <div
              class="inline-flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-opacity duration-150 flex-shrink-0"
            >
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-blue-600 hover:text-blue-800 cursor-pointer
                        "
                title="Dodaj podkategorię"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-red-600 hover:text-red-800
                            opacity-50 cursor-not-allowed hover:text-red-600
                        "
                disabled=""
                title="Usuwanie tylko nowych kategorii w trybie edycji"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mb-3"
          style="opacity: 1; margin-left: 20px;"
        >
          <div
            class="inline-flex items-center gap-2 group w-full"
          >
            <div
              class="flex-1"
            >
              <input
                class="w-full border-b focus:outline-none px-4 py-2  border-gray-300 text-gray-700 dark:text-white dark:border-gray-600"
                maxlength="100"
                name="name"
                placeholder="Nazwa podkategorii"
                type="text"
                value="Podregion"
              />
            </div>
            <div
              class="inline-flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-opacity duration-150 flex-shrink-0"
            >
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-blue-600 hover:text-blue-800 cursor-pointer
                        "
                title="Dodaj podkategorię"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-red-600 hover:text-red-800
                            opacity-50 cursor-not-allowed hover:text-red-600
                        "
                disabled=""
                title="Usuwanie tylko nowych kategorii w trybie edycji"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mb-3"
          style="opacity: 1; margin-left: 40px;"
        >
          <div
            class="inline-flex items-center gap-2 group w-full"
          >
            <div
              class="flex-1"
            >
              <input
                class="w-full border-b focus:outline-none px-4 py-2  border-gray-300 text-gray-700 dark:text-white dark:border-gray-600"
                maxlength="100"
                name="name"
                placeholder="Nazwa podkategorii"
                type="text"
                value="Miasto"
              />
            </div>
            <div
              class="inline-flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-opacity duration-150 flex-shrink-0"
            >
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-blue-600 hover:text-blue-800 cursor-pointer
                        "
                title="Dodaj podkategorię"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-red-600 hover:text-red-800
                            opacity-50 cursor-not-allowed hover:text-red-600
                        "
                disabled=""
                title="Usuwanie tylko nowych kategorii w trybie edycji"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <div
          class="mb-3"
          style="opacity: 1; margin-left: 0px;"
        >
          <div
            class="inline-flex items-center gap-2 group w-full"
          >
            <div
              class="flex-1"
            >
              <input
                class="w-full border-b focus:outline-none px-4 py-2  border-gray-300 text-gray-700 dark:text-white dark:border-gray-600"
                maxlength="100"
                name="name"
                placeholder="Nazwa kategorii"
                type="text"
                value="rok wydania"
              />
            </div>
            <div
              class="inline-flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-opacity duration-150 flex-shrink-0"
            >
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-blue-600 hover:text-blue-800 cursor-pointer
                        "
                title="Dodaj podkategorię"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-red-600 hover:text-red-800
                            opacity-50 cursor-not-allowed hover:text-red-600
                        "
                disabled=""
                title="Usuwanie tylko nowych kategorii w trybie edycji"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <button
          class="inline-flex items-center gap-1 p-3 text-sm bg-white dark:bg-gray-800 text-blue-600 hover:dark:text-white hover:text-blue-800 rounded-md "
          title="Dodaj nową kategorię"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="px-1"
          >
            Dodaj kategorię
          </span>
        </button>
        <div
          id="DndDescribedBy-8"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-8"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
        />
        <div
          class="fixed bottom-0 left-0 w-full bg-white dark:bg-gray-900 border-t border-gray-300 dark:border-gray-500 py-3 px-4 flex justify-between items-center shadow-[0_-2px_4px_rgba(0,0,0,0.05)] z-50"
        >
          <div
            class="max-w-3xl w-full mx-auto flex justify-between items-center"
          >
            <div
              class="flex gap-2"
            >
              <button
                class="px-2 py-2 border rounded text-gray-400 border-gray-300 cursor-not-allowed"
                disabled=""
                title="Cofnij (Ctrl+Z)"
                type="button"
              >
                <svg
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"
                  />
                </svg>
              </button>
              <button
                class="px-2 py-2 border rounded text-gray-400 border-gray-300 cursor-not-allowed"
                disabled=""
                title="Przywróć (Ctrl+Y)"
                type="button"
              >
                <svg
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16a8.002 8.002 0 017.6-5.5c1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex gap-2"
            >
              <button
                class="px-4 py-2 border rounded"
                type="button"
              >
                Anuluj
              </button>
              <button
                class="px-4 py-2 bg-blue-600 text-white rounded"
                type="submit"
              >
                Zapisz zmiany
              </button>
            </div>
          </div>
        </div>
        <div
          class="h-20"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`CreateCollectionPage tests should render loading state 1`] = `
<div>
  <div
    class="min-h-screen bg-gray-50 dark:bg-gray-900 flex flex-col overflow-y-auto"
  >
    <nav
      class="bg-gray-800 border-gray-200 dark:bg-gray-200 w-full border-b dark:border-gray-600"
    >
      <div
        class="max-w-screen-xl flex flex-wrap justify-between mx-auto p-1"
      >
        <div
          class="flex items-center mt-1"
        >
          <h1
            class="logo text-gray-200 dark:text-gray-900 text-6xl "
          >
            ethnopedia
          </h1>
        </div>
        <div
          class="flex items-center md:order-2"
        >
          <button
            class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="w-5 h-5 text-gray-800 dark:text-gray-200"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
          </button>
          <button
            class="text-gray-800 bg-white border border-gray-300 focus:outline-none
                           hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-lg text-sm
                           p-2.5 mr-2 dark:bg-gray-800 dark:text-white dark:border-gray-600
                           dark:hover:bg-gray-700 dark:hover:border-gray-600 dark:focus:ring-gray-700"
            type="button"
          >
            <svg
              class="w-4 h-4 m-0.5"
            />
          </button>
          <button
            class="mr-2 bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zaloguj się
          </button>
          <button
            class="bg-blue-500 hover:bg-blue-400 font-semibold text-white border-none"
            type="button"
          >
            Zarejestruj się
          </button>
        </div>
      </div>
    </nav>
    <div
      class="container px-8 mt-6 max-w-3xl mx-auto"
    >
      <nav
        class="flex"
      >
        <ol
          class="inline-flex items-center space-x-1 md:space-x-2"
        >
          <li
            class="inline-flex items-center text-lg"
          >
            <a
              class="inline-flex items-center font-medium text-gray-600 dark:text-gray-400 hover:text-blue-600 dark:hover:text-blue-600"
              href="/"
            >
              Strona główna
            </a>
          </li>
        </ol>
      </nav>
      <h2
        class="text-2xl font-bold mt-2"
      >
        Dodaj nową kolekcję
      </h2>
      <form>
        <label
          class="block text-sm text-gray-700 dark:text-white my-2 mt-4"
        >
          Nazwa
        </label>
        <input
          aria-label="name"
          class="w-full px-4 py-2 border rounded-lg text-gray-700 dark:text-white dark:bg-gray-700 focus:outline-none border-gray-300 dark:border-gray-600"
          maxlength="100"
          type="text"
          value=""
        />
        <label
          class="block text-sm text-gray-700 dark:text-white my-2 mt-4"
        >
          Opis
        </label>
        <textarea
          aria-label="description"
          class="w-full px-4 py-2 border rounded-lg resize-y focus:outline-none dark:bg-gray-700 dark:text-white border-gray-300 dark:border-gray-600"
          maxlength="1000"
          rows="4"
        />
        <hr
          class="mt-6"
        />
        <label
          class="block text-sm font-bold text-gray-700 dark:text-white my-2 mt-4"
        >
          Struktura metadanych w kolekcji
        </label>
        <p
          class="text-sm text-gray-600 dark:text-gray-400 mb-4"
        >
          Zbuduj hierarchię kategorii i podkategorii dla tej kolekcji. Dodawaj i usuwaj elementy za pomocą przycisków po prawej stronie pola.
        </p>
        <div
          class="mb-3"
          style="opacity: 1; margin-left: 0px;"
        >
          <div
            class="inline-flex items-center gap-2 group w-full"
          >
            <svg
              aria-describedby="DndDescribedBy-0"
              aria-disabled="false"
              aria-hidden="true"
              aria-roledescription="sortable"
              class="w-4 h-4 cursor-grab text-gray-400 hover:text-gray-600 flex-shrink-0"
              fill="currentColor"
              height="1em"
              role="button"
              stroke="currentColor"
              stroke-width="0"
              tabindex="0"
              viewBox="0 0 20 20"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Przeciągnij, aby zmienić kolejność
              </title>
              <path
                d="M10 6a2 2 0 110-4 2 2 0 010 4zM10 12a2 2 0 110-4 2 2 0 010 4zM10 18a2 2 0 110-4 2 2 0 010 4z"
              />
            </svg>
            <div
              class="flex-1"
            >
              <input
                class="w-full border-b focus:outline-none px-4 py-2  border-gray-300 text-gray-700 dark:text-white dark:border-gray-600"
                maxlength="100"
                name="name"
                placeholder="Nazwa kategorii"
                type="text"
                value=""
              />
            </div>
            <div
              class="inline-flex items-center gap-2 opacity-0 group-hover:opacity-100 transition-opacity duration-150 flex-shrink-0"
            >
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-blue-600 hover:text-blue-800 cursor-pointer
                        "
                title="Dodaj podkategorię"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
              <button
                class="p-2 text-sm rounded-md hover:dark:text-white bg-white
                            opacity-0
                            text-red-600 hover:text-red-800
                            
                        "
                title="Usuń"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 20 20"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm5-1a1 1 0 00-1 1v6a1 1 0 102 0V8a1 1 0 00-1-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <button
          class="inline-flex items-center gap-1 p-3 text-sm bg-white dark:bg-gray-800 text-blue-600 hover:dark:text-white hover:text-blue-800 rounded-md ml-[24px]"
          title="Dodaj nową kategorię"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="w-4 h-4"
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 20 20"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
              fill-rule="evenodd"
            />
          </svg>
          <span
            class="px-1"
          >
            Dodaj kategorię
          </span>
        </button>
        <div
          id="DndDescribedBy-0"
          style="display: none;"
        >
          
    To pick up a draggable item, press the space bar.
    While dragging, use the arrow keys to move the item.
    Press space again to drop the item in its new position, or press escape to cancel.
  
        </div>
        <div
          aria-atomic="true"
          aria-live="assertive"
          id="DndLiveRegion-0"
          role="status"
          style="position: fixed; top: 0px; left: 0px; width: 1px; height: 1px; margin: -1px; border: 0px; padding: 0px; overflow: hidden; clip-path: inset(100%); white-space: nowrap;"
        />
        <label
          class="block text-sm font-bold text-gray-700 dark:text-white my-2 mt-4"
        >
          Dostępność kolekcji
        </label>
        <p
          class="text-sm text-gray-600 dark:text-gray-400 mb-4"
        >
          Ustal dla kogo ma być widoczna kolekcja. Kolekcja prywatna jest widoczna tylko dla użytkowników zalogowanych. Kolekcja publiczna jest widoczna również dla użytkowników niezalogowanych.
        </p>
        <div>
          <button
            aria-label="select-export-as-spreadsheet"
            class="px-4 py-2 color-button rounded-r-none text-xs"
            type="button"
          >
            Kolekcja publiczna
          </button>
          <button
            aria-label="select-export-as-csv"
            class="px-4 py-2  rounded-l-none text-xs"
            type="button"
          >
            Kolekcja prywatna
          </button>
        </div>
        <div
          class="fixed bottom-0 left-0 w-full bg-white dark:bg-gray-900 border-t border-gray-300 dark:border-gray-500 py-3 px-4 flex justify-between items-center shadow-[0_-2px_4px_rgba(0,0,0,0.05)] z-50"
        >
          <div
            class="max-w-3xl w-full mx-auto flex justify-between items-center"
          >
            <div
              class="flex gap-2"
            >
              <button
                class="px-2 py-2 border rounded text-gray-400 border-gray-300 cursor-not-allowed"
                disabled=""
                title="Cofnij (Ctrl+Z)"
                type="button"
              >
                <svg
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M12.5 8c-2.65 0-5.05.99-6.9 2.6L2 7v9h9l-3.62-3.62c1.39-1.16 3.16-1.88 5.12-1.88 3.54 0 6.55 2.31 7.6 5.5l2.37-.78C21.08 11.03 17.15 8 12.5 8z"
                  />
                </svg>
              </button>
              <button
                class="px-2 py-2 border rounded text-gray-400 border-gray-300 cursor-not-allowed"
                disabled=""
                title="Przywróć (Ctrl+Y)"
                type="button"
              >
                <svg
                  class="w-5 h-5"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M0 0h24v24H0z"
                    fill="none"
                  />
                  <path
                    d="M18.4 10.6C16.55 8.99 14.15 8 11.5 8c-4.65 0-8.58 3.03-9.96 7.22L3.9 16a8.002 8.002 0 017.6-5.5c1.95 0 3.73.72 5.12 1.88L13 16h9V7l-3.6 3.6z"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex gap-2"
            >
              <button
                class="px-4 py-2 border rounded"
                type="button"
              >
                Anuluj
              </button>
              <button
                class="px-4 py-2 bg-blue-600 text-white rounded"
                type="submit"
              >
                Utwórz
              </button>
            </div>
          </div>
        </div>
        <div
          class="h-20"
        />
      </form>
    </div>
  </div>
</div>
`;
